--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h2></h2>
 			<p></p>
 		</div>
-		<p id="downloadSVG"><a href="#">Download as SVG</a></p>
+		<p id="downloadSVG"><a href="#">Als SVG-Datei herunterladen</a></p>
   	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
