agency = NULL bugix & support for flare with products

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ $(function() {
 	var zoomLevels = {
 		'directorate': 0,
 		'agency': 1,
-		'product_group': 2
+		'product_group': 2,
+		'product': 3
 	}
 	
 	var curZoomLevel = 0;
