--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="js/d3.js"></script>
-    <script type="text/javascript" src="js/d3.layout.js"></script>
+	<script src="lib/d3.v2.min.js"></script>
+	
     <script type="text/javascript">
 
 $(function() {
