--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <link type="text/css" rel="stylesheet" href="flare.css"/>
 	<title>Stadt Bern Nettoausgaben - Budget 2012</title>
+	<meta name="description" content="Die Ausgaben des Berners Budget 2012 in Kreisen visualisiert. Hierarchie der Kreise: Direktionen, Dienstellen, Produkt Gruppen und Produkte." />
     <style type="text/css">
 		text {
 			font-size: 11px;
@@ -15,34 +16,62 @@
 		}
 		
 		text.agency, text.directorate {
-			fill: #e1353f;
-			text-shadow:0 0 20px #fff;
+			fill: #fff;
+			text-shadow:0 0 10px #000;
 			font-weight:bold;
 			font-size:15px;
 			dy:.35em;
 		}
 		
 		text.directorate {
-			fill: #a8272d;
-			font-size:20px;
+			font-size:25px;
+		}
+		
+		circle.directorate {
+			stroke-width: 3px;
+		}
+		
+		circle.directorate.GuB {
+			stroke:gray;
+			fill:gray;
+		}
+		circle.directorate.FPI {
+			stroke:#074EA1;
+			fill:#074EA1;
+		}
+		circle.directorate.PRD, circle.directorate.BSS {
+			stroke:#E11F21;
+			fill:#E11F21;
+		}
+		circle.directorate.SUE {
+			stroke:#F07D08;
+			fill:#F07D08;
+		}
+		circle.directorate.TVS {
+			stroke:#060;
+			fill:#060;
 		}
 		
 		circle {
-			fill: #e1353f;
-			fill-opacity: .1;
-			stroke: #e1353f;
+			fill:#000;
+			fill-opacity: .05;
+			stroke: #fff;
+			stroke-width: 1px;
 			pointer-events: all;
 		}
 		
 		circle.parent {
-			fill: #a8272d;
-			fill-opacity: .1;
-			stroke: #a8272d;
+			stroke: #fff;
 		}
 		
 		circle:hover {
-			stroke: #ff7f0e;
+			stroke: #000;
 			stroke-width: 2px;
+		}
+		
+		circle.directorate:hover {
+			stroke-width: 3px;
+			stroke:#000 !important;
 		}
     </style>
   </head>
@@ -66,7 +95,7 @@
   	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="lib/d3.v2.custom.js"></script>
+	<script src="lib/d3/d3.v2.custom.js"></script>
 	
     <script type="text/javascript">
 
@@ -177,6 +206,7 @@ $(function() {
 		}});
 	}
 	
+	var formatPercent = d3.format('.2%');
 	/* tooltip */
 	var $tip = $('<div id="tooltip"></div>').html('<div></div>').hide().appendTo($body);
 	var $tipInner = $tip.find('div');
@@ -188,7 +218,7 @@ $(function() {
 	}); 
 	$(document).on('mouseover', 'svg circle', function(){
 		var d = this.__data__;
-		$tipInner.html('<strong>'+d.name+(d.acronym ? ' ('+d.acronym+')' : '')+'</strong><br />CHF '+formatCHF(d.size));
+		$tipInner.html('<strong>'+d.name+(d.acronym ? ' ('+d.acronym+')' : '')+'</strong><br />CHF '+formatCHF(d.size)+' ('+formatPercent(d.size/root.size)+')');
 		$tip.show();
 	});
 	$(document).on('mouseout', 'svg circle', function(){
@@ -211,7 +241,7 @@ $(function() {
 		vis.selectAll("circle")
 		    .data(nodes)
 		  .enter().append("svg:circle")
-		    .attr("class", function(d) { return (d.children ? "parent" : "child")+(d.type ? ' '+d.type : ''); })
+		    .attr("class", function(d) { return (d.children ? "parent" : "child")+(d.type ? ' '+d.type : '')+(d.depth == 1 ? ' '+d.acronym : ''); })
 		    .attr("cx", function(d) { return d.x; })
 		    .attr("cy", function(d) { return d.y; })
 		    .attr("r", function(d) { return d.r; })
